# spring-genai

./: README.md  index.html  mkdocs.yml  pyproject.toml
ai/chat-client/: index.html
ai/chat-model/: index.html
ai/chat/aws/: index.html
ai/chat/azure/: index.html
ai/embed/aws/: index.html
ai/embed/azure/: index.html
ai/embedd-model/: index.html
ai/multimodality/: index.html
ai/prompt/: index.html
ai/vectordb/: index.html
ai/vectordb/hana/: index.html
ai/vectordb/neo4j/: index.html
aiconcepts/: index.html
docs/: aiconcepts.md  getstarted.md  index.md  overview.md
docs/ai/: chat-client.md  chat-model.md
getstarted/: index.html
overview/: index.html
search/: search_index.json
tags/: index.html
